--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,8 +64,8 @@ const { title } = Astro.props;
 						<a href="/produkty" class="text-primary-600 hover:text-primary-900 transition-colors">
 							Produkty
 						</a>
-						<a href="/o-nas" class="text-primary-600 hover:text-primary-900 transition-colors">
-							O nas
+						<a href="/kwalifikacje" class="text-primary-600 hover:text-primary-900 transition-colors">
+							Kwalifikacje
 						</a>
 						<a href="/porady" class="text-primary-600 hover:text-primary-900 transition-colors">
 							Porady
@@ -88,8 +88,8 @@ const { title } = Astro.props;
 						<a href="/produkty" class="block px-4 py-2 text-primary-600 hover:text-primary-900 hover:bg-primary-50 rounded-lg transition-colors">
 							Produkty
 						</a>
-						<a href="/o-nas" class="block px-4 py-2 text-primary-600 hover:text-primary-900 hover:bg-primary-50 rounded-lg transition-colors">
-							O nas
+						<a href="/kwalifikacje" class="block px-4 py-2 text-primary-600 hover:text-primary-900 hover:bg-primary-50 rounded-lg transition-colors">
+							Kwalifikacje
 						</a>
 						<a href="/porady" class="block px-4 py-2 text-primary-600 hover:text-primary-900 hover:bg-primary-50 rounded-lg transition-colors">
 							Porady
