--- a/src/pages/porady/[...slug].astro
+++ b/src/pages/porady/[...slug].astro
@@ -54,6 +54,7 @@ const { Content } = await entry.render();
                 transition:name={`image-${entry.slug}`}
                 format="webp"
                 quality={80}
+                loading="eager"
               />
             </div>
           )}
